# proof-of-futures

./: .gitignore  GEMINI.md  README.md
client/src/: config.ts  delegate.ts  fork.ts  subscribe.ts  tick-loop.ts
frontend/: next.config.js  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: IdeaPanel.tsx  NodeGraph.tsx  StatusBar.tsx  TimelineTree.tsx
frontend/lib/: config.ts  idl.json  types.ts
program/: Anchor.toml  Cargo.toml
program/programs/proof_of_futures/: Cargo.toml
program/programs/proof_of_futures/src/: lib.rs
