[package]
name = "proof_of_futures"
version = "0.1.0"
description = "Proof of Futures - MagicBlock Ephemeral Rollup Simulation"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "proof_of_futures"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
# Required for MagicBlock ER delegation
ephemeral = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
# MagicBlock delegation program CPI
ephemeral-rollups-sdk = { version = "0.4.3", features = ["cpi"] }
