[package]
name = "proof_of_futures"
version = "0.1.0"
description = "Proof of Futures - MagicBlock Ephemeral Rollup Simulation"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "proof_of_futures"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
# Required for MagicBlock ER delegation
ephemeral = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
ephemeral-rollups-sdk = { version = "0.6.5", features = ["anchor"] }
